force-app/main/default/objects/Purge_Settings__mdt/Purge_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Purge Setting</label>
    <pluralLabel>Purge Settings</pluralLabel>
</CustomObject>