force-app/main/default/objects/Purge_Settings__mdt/fields/Age_of_Records_to_Purge__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Records_to_Purge__c</fullName>
    <inlineHelpText>Enter number of days it must age with no activity. Activity is evaluating against Last Modified Date of Record.</inlineHelpText>
    <label>Age of Records to Purge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>