force-app/main/default/objects/Purge_Settings__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Purge_Settings</relationshipLabel>
    <relationshipName>Purge_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>