force-app/main/default/objects/Purge_Settings__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <inlineHelpText>Add a Comma &quot;,&quot; to separate the API name of the Record type.</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>